--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,12 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: file:; font-src 'self' file:; connect-src 'self' file:"
+      content="default-src 'self';
+      script-src 'self';
+      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: blob: file:;
+      font-src 'self' file:;
+      connect-src 'self' file: https://huggingface.co;"
     />
   </head>
 
